--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_OCK_API_KEY=
 NEXT_PUBLIC_VERCEL_ENV=
 NEXT_PUBLIC_CDP_PROJECT_ID=
+NEXT_PUBLIC_AUTONOME_AGENT_URL=
+NEXT_PUBLIC_AUTONOME_AGENT_API_SECRET=
