--- a/package.json
+++ b/package.json
@@ -8,31 +8,49 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "type": "module",
   "dependencies": {
     "@ai-sdk/azure": "^1.1.9",
     "@ai-sdk/openai": "^1.1.9",
     "@coinbase/coinbase-sdk": "^0.17.0",
-    "@coinbase/onchainkit": "^0.36.10",
+    "@coinbase/onchainkit": "^0.35.6",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@privy-io/react-auth": "^2.4.2",
     "@privy-io/server-auth": "^1.18.7",
     "@privy-io/wagmi": "^1.0.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.1.26",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "imask": "^7.6.1",
     "immer": "^10.1.1",
+    "konsta": "^4.0.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.1",
     "next": "15.1.6",
     "nillion-sv-wrappers": "^1.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-textarea-autosize": "^8.5.7",
+    "react-toastify": "^11.0.3",
     "shadcn": "^2.3.0",
+    "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.11.0",
@@ -48,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
